# remote-desktop-app

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
agent/: Cargo.toml
agent/examples/: dev_viewer.rs
agent/src/: main.rs
controller-ui/: package.json
controller-ui/src/: index.html
controller-ui/src-tauri/: Cargo.toml  tauri.conf.json
controller-ui/src-tauri/src/: main.rs
core-engine/: Cargo.toml
core-engine/examples/: live_view.rs  live_view_compressed.rs  live_view_pipelined.rs  test_encode.rs  test_input.rs
core-engine/src/: lib.rs
core-engine/src/capture/: mod.rs  windows_impl.rs
core-engine/src/crypto/: mod.rs
core-engine/src/encode/: mod.rs
core-engine/src/input/: mod.rs  windows_impl.rs
core-engine/src/net/: mod.rs
docker/relay-server/: Dockerfile
docker/signaling-server/: Dockerfile
relay-server/: Cargo.toml
relay-server/src/: main.rs
signaling-server/: Cargo.toml
signaling-server/examples/: test_agent.rs  test_controller.rs
signaling-server/src/: main.rs  protocol.rs
