[package]
name = "core_engine"
version = "0.1.0"
edition = "2021"
description = "Motor central: captura de pantalla, codificacion de video, inyeccion de input y cifrado."

[dependencies]
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
# Compresion JPEG por frame (motion-JPEG).
# jpeg-encoder: encoder rapido, Rust puro, sin libs nativas.
# image: lo seguimos usando solo para decodificar (deja el pipeline
# funcionando igual del lado del "controller" que recibe los frames).
jpeg-encoder = "0.6"
image = { version = "0.24", default-features = false, features = ["jpeg"] }

# API de captura DXGI e input, solo se compila en Windows
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.58"

# minifb (ventana de prueba) solo hace falta en Windows - asi Linux/macOS
# ni siquiera intentan resolver sus dependencias (evita arrastrar libs
# de X11/Wayland innecesarias en otras plataformas).
[target.'cfg(windows)'.dev-dependencies]
minifb = "0.27"

# --- Se van a sumar en los proximos pasos ---
# openh264 / vpx-encode      # codificacion de video
# chacha20poly1305 / snow    # cifrado end-to-end (Noise Protocol)
