[package]
name = "relay_server"
version = "0.1.0"
edition = "2021"
description = "Relay (TURN-like) usado como fallback cuando la conexion P2P directa no es posible."

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
