[package]
name = "signaling_server"
version = "0.1.0"
edition = "2021"
description = "Coordina el handshake inicial entre controller y agent (IDs, claves, NAT info)."

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Se suman en los proximos pasos ---
# axum / tungstenite   # servidor websocket para el handshake
